# projet-python

./: .gitignore  Dockerfile  README.md  compose.yml
client/: .gitignore  Global.py  armors  classe_item_ecuperation  classe_items  inventaire  item_loader  items  items_loader  main.py  map.tmx  requirement.txt  server_address.txt  weapons
client/src/: Client.py
client/src/client/: AccountInfoUI.py  CreateAccount.py  CreateAccountUI.py  DeleteAccount.py  GetAccount.py  Login.py  LoginUI.py  ServerUI.py  UI.py  UpdateAccount.py
client/src/client/proto/: account.proto
client/src/client/proto_compiled/account/: account_pb2.py  account_pb2.pyi  account_pb2_grpc.py
client/src/data/proto/: data.proto
client/src/data/proto_compiled/data/: data_pb2.py  data_pb2.pyi  data_pb2_grpc.py
client/src/entity/: entity.py
client/src/entity/proto/: player_pos.proto
client/src/entity/proto_compiled/entity/: player_pos_pb2.py  player_pos_pb2.pyi  player_pos_pb2_grpc.py
client/src/grpc_lib/: MakeRequest.py
client/src/map/: map.py
client/src/music/: MusicManagement.py
data/: item.json  map.tmx  terrain_atlas.tsx
server/: Cargo.toml  build.rs
server/data/: item.json
server/proto/: account.proto  accountManagement.proto  data.proto  player_pos.proto  pos.proto
server/src/: main.rs
server/src/service/: account_services.rs  data_services.rs  mod.rs  player_pos_service.rs  state.rs
server/src/sqlite/: db.rs
