[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
tonic = "0.11.0"
prost = "0.12.3"
uuid = { version = "1.7.0", features = ["v4"] }
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio-native-tls"] }
chrono = "0.4.37"
ring = "0.17.8"
pbkdf2 = "0.13.0-pre.0"
rand = "0.9.0-alpha.1"
base64 = "0.22.0"
tonic-reflection = "0.11.0"
serde_json = "1.0.115"
serde = { version = "1.0.197", features = ["derive"] }

[build-dependencies]
tonic-build = "0.11.0"
